[package]
name = "loader"
version = "0.1.0"
edition = "2018"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "synchapi", "handleapi"] }
bytes = "1.0"
